--- a/index.html
+++ b/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Página</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<header>
-    <h2> Cabeçalho </h2>
-</header>
-<body>
-    <h1> Olá Mundo! </h1>
-    <h2>Jader-code</h2>
 
-    <p>Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
-    
-</body>
-<footer>
-    <h2> Rodapé </h2>
-</footer>
-</html>
+</head>
+<body>
+    <header>
+        <h2> Cabeçalho </h2>
+    </header>
+    <main> 
+
+<section id="minhaApresentacao">
+    <img src="#" alt="Imagem de perfil">
+    <h2> eu sou Jader Wallace Santos de Ramos</h2>
+    <h1> Eu sou estudante de exatas do 2F do colégio estadual Gabriel de Lara </h1>
+    <p> Sou desempregado e no momento estou tentando ser melhor</p>
+    <p> Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
+</section>
+        
+<section id="minhasHabilidades">
+   <p>ResoluçãoDeProblemasMatematicos</p>
+   <p>Gentileza</p>
+   <p>AtividadesFisicas</p>
+   <p>Proatividade</p>
+   <p>Organização</p>
+   <p>Responsabilidade</p>
+   <p>AltoEstima</p>
+</section>
+
+<section id="meusProjetos">
+    <p>Um bom emprego</p>
+    <p>Casa própria</p>
+    <p>estabilidade financeira</p>
+    <p>estar em forma</p>
+    <p>uma esposa</p>
+    <p>um filho</p>
+    <p>Um carro</p>
+</section>
+
+    </main>
+    <footer>
+        <h2> Rodapé </h2>
+    </footer>
+    </body>
+    </html>   
