--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <main> 
 
 <section id="minhaApresentacao">
-    <img src="#" alt="Imagem de perfil">
+    <img src="img/jader.jpg" alt="Imagem de perfil">
     <h2> eu sou Jader Wallace Santos de Ramos</h2>
     <h1> Eu sou estudante de exatas do 2F do colégio estadual Gabriel de Lara </h1>
     <p> Sou desempregado e no momento estou tentando ser melhor</p>
     <p> Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
 </section>
         
+
 <section id="minhasHabilidades">
    <p>ResoluçãoDeProblemasMatematicos</p>
    <p>Gentileza</p>
