--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
     </header>
     <main> 
 
-<section id="minhaApresentacao">
-    <img src="img/jader.jpg" alt="Imagem de perfil">
-    <h2> eu sou Jader Wallace Santos de Ramos</h2>
-    <h1> Eu sou estudante de exatas do 2F do colégio estadual Gabriel de Lara </h1>
-    <p> Sou desempregado e no momento estou tentando ser melhor</p>
-    <p> Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
+<section id="estudante">
+    <h2 class="estudante-titulo">minha Apresentacao</h2>
+    <div>
+        <img src="img/jader.jpg" alt="Imagem de perfil do Jader" class="estudante-imagem">
+        <h3 class="estudante-nome" > Sou Jader Wallace Santos de Ramos</h3>
+        <h1> Eu sou estudante de exatas do 2F do colégio estadual Gabriel de Lara </h1>
+        <p> Sou desempregado e no momento estou tentando ser melhor</p>
+        <p> Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
+    </div>
 </section>
         
-
 <section id="minhasHabilidades">
    <p>ResoluçãoDeProblemasMatematicos</p>
    <p>Gentileza</p>
