--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <section id="estudante">
     <h2 class="estudante-titulo">minha Apresentacao</h2>
-    <div>
+    <div class="estudante-div" >
         <img src="img/jader.jpg" alt="Imagem de perfil do Jader" class="estudante-imagem">
         <h3 class="estudante-nome" > Sou Jader Wallace Santos de Ramos</h3>
         <h1> Eu sou estudante de exatas do 2F do colégio estadual Gabriel de Lara </h1>
