--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 </section>
         
 <section id="minhasHabilidades">
-   <p>ResoluçãoDeProblemasMatematicos</p>
+   <p>Resolução De Problemas Matematicos</p>
    <p>Gentileza</p>
-   <p>AtividadesFisicas</p>
+   <p>Atividades Fisicas</p>
    <p>Proatividade</p>
    <p>Organização</p>
    <p>Responsabilidade</p>
-   <p>AltoEstima</p>
+   <p>Alto Estima</p>
 </section>
 
 <section id="meusProjetos">
@@ -45,9 +45,10 @@
     <p>Um carro</p>
 </section>
 
+<footer class="rodape">
+    <h2> Rodapé </h2>
+    <p>Desenvolvido por Jader Wallace Santos de Ramos, nas aulas de Matemática II, em 2025.Projeto fictício sem fins comercias<p>
+</footer>
     </main>
-    <footer>
-        <h2> Rodapé </h2>
-    </footer>
     </body>
     </html>   
