--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <h1> Eu sou estudante de exatas do 2F do colégio estadual Gabriel de Lara </h1>
         <p> Sou desempregado e no momento estou tentando ser melhor</p>
         <p> Estamos aprendendo linguagem de programação em HTML e CSS. Esta é minha primeira página.</p>
+        <a href="https://github.com/Jader-code/segundo-repository.git"> 
+            <img src="img/github.svg" alt="Ícone do GitHub" class="estudante-ícone">
+        </a>
+        <a href="https://instagram.com/ws.jader"> 
+            <img src="img/instagram.svg" alt="Ícone do Instagram" class="estudante-ícone">
+        </a>
+        <a href="https://wa.me/5541998092386">
+            <img src="img/whatsapp.svg" alt="Ícone do Whatsapp" class="estudante-ícone">
+        </a>
     </div>
 </section>
         
