--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="https://github.com/Jader-code/segundo-repository.git"> 
             <img src="img/github.svg" alt="Ícone do GitHub" class="estudante-ícone">
         </a>
-        <a href="https://instagram.com/ws.jader"> 
+        <a href="https://instagram.com/ws_jader"> 
             <img src="img/instagram.svg" alt="Ícone do Instagram" class="estudante-ícone">
         </a>
         <a href="https://wa.me/5541998092386">
@@ -56,7 +56,7 @@
 
 <footer class="rodape">
     <h2> Rodapé </h2>
-    <p>Desenvolvido por Jader Wallace Santos de Ramos, nas aulas de Matemática II, em 2025.Projeto fictício sem fins comercias<p>
+    <p>Desenvolvido por Jader Wallace Santos de Ramos, nas aulas de Matemática II, em 2025. Projeto fictício sem fins comercias<p>
 </footer>
     </main>
     </body>
