--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Página</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -35,13 +37,15 @@
 </section>
         
 <section id="minhasHabilidades">
-   <p>Resolução De Problemas Matematicos</p>
-   <p>Gentileza</p>
-   <p>Atividades Fisicas</p>
-   <p>Proatividade</p>
-   <p>Organização</p>
-   <p>Responsabilidade</p>
-   <p>Alto Estima</p>
+    <div>
+        <p class="badge bg-secondary" >Resolução De Problemas Matematicos</p>
+        <p class="badge bg-secondary" >Gentileza</p>
+        <p class="badge bg-secondary" >Atividades Fisicas</p>
+        <p class="badge bg-secondary" >Proatividade</p>
+        <p class="badge bg-secondary" >Organização</p>
+        <p class="badge bg-secondary" >Responsabilidade</p>
+        <p class="badge bg-secondary" >Alto Estima</p>
+    </div>
 </section>
 
 <section id="meusProjetos">
