--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </section>
         
 <section id="minhasHabilidades">
-    <div>
+    <div class="container text-center">
         <p class="badge bg-secondary" >Resolução De Problemas Matematicos</p>
         <p class="badge bg-secondary" >Gentileza</p>
         <p class="badge bg-secondary" >Atividades Fisicas</p>
